[metadata]
name = CTF_Lib
version = attr: CTF_Library.__version__
description = My Library for CTF competitions
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.12.0
install_requires =
	pycryptodome>=3.21.0
	pwntools>=4.14.1
	ecdsa>=0.19.1
	fastecdsa>=3.0.1
	setproctitle>=1.3.6

[options.package_data]
* = *.so, *.pyd
